# whisper.cpp

./: .gitignore  pyproject.toml  whisper.sh
examples/python/: whisper_processor.py
