[project]
name = "whisper-cpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ane-transformers>=0.1.1",
    "coremltools>=9.0",
    "openai-whisper>=20250625",
    "silero-vad>=6.2.0",
    "torch==2.7",
]

[project.optional-dependencies]
audio = [
    "datasets>=4.5.0",
]
